<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="504dp"
        android:layout_marginBottom="196dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:background="@color/buttonColor"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="68dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/buttonColor"
                android:onClick="goBack"
                app:srcCompat="@drawable/backarrow" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="366dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonColor"
                android:contentDescription="@string/product_image"
                app:srcCompat="@drawable/shopit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="171dp"
            android:orientation="vertical"></LinearLayout>

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/buttonColor"
            android:onClick="loginUser"
            android:text="@string/login_button"
            android:textColor="@color/buttonFontColor" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>