<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginBottom="15dp"
            android:background="@color/buttonColor"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="68dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/buttonColor"
                android:onClick="goBack"
                app:srcCompat="@drawable/backarrow" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="366dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonColor"
                android:contentDescription="@string/product_image"
                app:srcCompat="@drawable/shopit" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="518dp"
            android:layout_marginBottom="218dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:orientation="vertical">

            </LinearLayout>

            <EditText
                android:id="@+id/signup_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:hint="name"
                android:inputType="textPersonName"
                android:textAlignment="viewStart" />

            <EditText
                android:id="@+id/signup_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/user_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/signup_password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/signup_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/buttonColor"
                android:onClick="signupUser"
                android:text="@string/sign_up_Button"
                android:textColor="@color/buttonFontColor"


                />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>