<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProduct">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/buttonColor"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="4dp"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:background="@color/buttonColor"
            android:onClick="goBack"
            app:srcCompat="@drawable/backarrow" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="321dp"
            android:layout_height="88dp"
            android:layout_weight="1"
            android:background="@color/buttonColor"
            android:contentDescription="@string/product_image"
            app:srcCompat="@drawable/shopit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="665dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="82dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:orientation="vertical"></LinearLayout>

        <EditText
            android:id="@+id/prod_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/product_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/prod_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/product_brand"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/prod_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Price"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/prod_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/product_description"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/prod_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Category"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="398dp">

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="416dp"
                    android:layout_height="215dp"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/uploaded_prod_img"
                        android:layout_width="400dp"
                        android:layout_height="182dp"
                        android:layout_weight="1"
                        app:srcCompat="@color/buttonFontColor" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="76dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/buttonColor"
                    android:onClick="OpenCamera"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@android:drawable/ic_menu_camera" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/buttonColor"
            android:onClick="AddProduct"
            android:text="add"
            android:textColor="@color/buttonFontColor" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>