<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="hideMenu"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="#181717"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/imageButton4"
                        android:layout_width="35dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/buttonColor"
                        android:onClick="showMenu"
                        app:srcCompat="@drawable/menulist" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="144dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/shopit" />

                    <Button
                        android:id="@+id/main_page_login_button"
                        android:layout_width="69dp"
                        android:layout_height="wrap_content"
                        android:background="@color/buttonColor"
                        android:onClick="goToLoginPage"
                        android:text="@string/login_button"
                        android:textColor="@color/buttonFontColor"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/main_page_signup_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/buttonColor"
                        android:onClick="goToSignupPage"
                        android:text="@string/sign_up_Button"
                        android:textAlignment="center"
                        android:textColor="@color/buttonFontColor" />

                    <Button
                        android:id="@+id/main_page_greeting"
                        android:layout_width="69dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/buttonColor"
                        android:textColor="@color/buttonFontColor"
                        android:visibility="gone" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/buttonFontColor"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/search_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="75"
                    android:ems="10"
                    android:hint="@string/search"
                    android:inputType="textPersonName" />

                <ImageButton
                    android:id="@+id/search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="25"
                    android:background="@color/buttonColor"
                    android:onClick="search_product"
                    app:srcCompat="@drawable/search_icon" />
            </LinearLayout>

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:onClick="hideMenu">

                <LinearLayout
                    android:id="@+id/prod_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:onClick="hideMenu"
                    android:orientation="vertical">

                    <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:orientation="horizontal">-->

                    <!--<LinearLayout-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_margin="10dp"-->
                    <!--android:layout_weight="50"-->
                    <!--android:background="@color/buttonFontColor"-->
                    <!--android:elevation="20dp"-->
                    <!--android:orientation="vertical">-->

                    <!--<ImageView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="150dp"-->
                    <!--app:srcCompat="@drawable/iphonex" />-->

                    <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="25dp"-->
                    <!--android:text="@string/iphone_name"-->
                    <!--android:textAlignment="center" />-->

                    <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/price"-->
                    <!--android:textAlignment="center" />-->

                    <!--</LinearLayout>-->

                    <!--<LinearLayout-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_margin="10dp"-->
                    <!--android:layout_weight="50"-->
                    <!--android:background="@color/buttonFontColor"-->
                    <!--android:elevation="20dp"-->
                    <!--android:orientation="vertical">-->

                    <!--<ImageView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="150dp"-->
                    <!--app:srcCompat="@drawable/iphonex" />-->

                    <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="25dp"-->
                    <!--android:text="@string/iphone_name"-->
                    <!--android:textAlignment="center" />-->

                    <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/price"-->
                    <!--android:textAlignment="center" />-->

                    <!--</LinearLayout>-->

                    <!--</LinearLayout>-->

                    <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:orientation="horizontal">-->

                    <!--<LinearLayout-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_margin="10dp"-->
                    <!--android:layout_weight="50"-->
                    <!--android:background="@color/buttonFontColor"-->
                    <!--android:elevation="20dp"-->
                    <!--android:orientation="vertical">-->

                    <!--<ImageView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="150dp"-->
                    <!--app:srcCompat="@drawable/iphonex" />-->

                    <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="25dp"-->
                    <!--android:text="@string/iphone_name"-->
                    <!--android:textAlignment="center" />-->

                    <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/price"-->
                    <!--android:textAlignment="center" />-->

                    <!--</LinearLayout>-->

                    <!--<LinearLayout-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_margin="10dp"-->
                    <!--android:layout_weight="50"-->
                    <!--android:background="@color/buttonFontColor"-->
                    <!--android:elevation="20dp"-->
                    <!--android:orientation="vertical">-->

                    <!--<ImageView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="150dp"-->
                    <!--app:srcCompat="@drawable/iphonex" />-->

                    <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="25dp"-->
                    <!--android:text="@string/iphone_name"-->
                    <!--android:textAlignment="center" />-->

                    <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/price"-->
                    <!--android:textAlignment="center" />-->

                    <!--</LinearLayout>-->

                    <!--</LinearLayout>-->

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="318dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/my_menu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/buttonColor"
                    android:visibility="gone">

                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="0dp"
                        android:layout_height="43dp"
                        android:layout_weight="1"
                        android:background="@color/buttonColor"
                        android:onClick="hideMenu"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/menulist" />

                    <Button
                        android:id="@+id/main_page_add_prod_button"
                        android:layout_width="0dp"
                        android:layout_height="72dp"
                        android:layout_marginTop="48dp"
                        android:layout_weight="1"
                        android:background="@color/buttonColor"
                        android:onClick="gotoaddProductpage"
                        android:text="Add Products"
                        android:textColor="@color/buttonFontColor"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/main_page_logout_button"
                        android:layout_width="0dp"
                        android:layout_height="62dp"
                        android:layout_marginTop="148dp"
                        android:layout_weight="1"
                        android:background="@color/buttonColor"
                        android:onClick="logoutUser"
                        android:text="@string/logout_button"
                        android:textColor="@color/buttonFontColor"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>